@@ -488,8 +488,8 @@ static void extra_ic_generated(iCode *ic)
     }
 }
 
-template <class T_t, class G_t, class I_t, class SI_t>
-static bool tree_dec_ralloc(T_t &T, G_t &G, const I_t &I, SI_t &SI)
+template <class T_t, class G_t, class I_t, class SI_t, class SAI_t>
+static bool tree_dec_ralloc(T_t &T, G_t &G, const I_t &I, SI_t &SI, SAI_t &SAI)
 {
   bool assignment_optimal;
 
@@ -551,7 +551,7 @@ static bool tree_dec_ralloc(T_t &T, G_t &G, const I_t &I, SI_t &SI)
   for(unsigned int i = 0; i < boost::num_vertices(G); i++)
     set_surviving_regs(winner, i, G, I);
 
-  set_spilt(G, I, SI);
+  set_spilt(G, I, SI, SAI);
 
   return(!assignment_optimal);
 }
@@ -593,12 +593,13 @@ iCode *stm8_ralloc2_cc(ebbIndex *ebbi)
   guessCounts (ic, ebbi);
 
   scon_t stack_conflict_graph;
+  sacon_t stack_alignment_conflict_graph;
 
-  stm8_assignment_optimal = !tree_dec_ralloc(tree_decomposition, control_flow_graph, conflict_graph, stack_conflict_graph);
+  stm8_assignment_optimal = !tree_dec_ralloc(tree_decomposition, control_flow_graph, conflict_graph, stack_conflict_graph, stack_alignment_conflict_graph);
 
   stm8RegFix (ebbs, count);
 
-  chaitin_salloc(stack_conflict_graph);
+  chaitin_salloc(stack_conflict_graph, stack_alignment_conflict_graph);
 
   if(options.dump_graphs)
     dump_scon(stack_conflict_graph);
